# psyque_app

./: .gitignore  CLAUDE.md  DESIGN.md  PRODUCT.md  PRODUCTION_AUDIT.md  README.md  RIPS-ACTUALIZACION.md
backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0002_grant_authenticated.py  0003_fix_rls_empty_tenant.py  0005_rips_status_columns.py  0006_invoices_table.py  0007_clinical_documents.py
backend/app/: main.py
backend/app/api/v1/: appointments.py  auth_routes.py  availability.py  documents.py  patients.py  profile.py  reports.py
backend/app/core/: config.py  database.py  security.py
backend/app/jobs/: reminders.py
backend/app/models/: __init__.py  appointment.py  base.py  clinical_document.py  invoice.py  patient.py  rips_export.py  session.py  tenant.py
backend/app/schemas/: appointment.py  availability.py  document.py  patient.py  profile.py  report.py  rips.py  session.py
backend/app/services/: appointment_service.py  availability_service.py  document_service.py  profile_service.py  rips_service.py  session_service.py
backend/tests/: conftest.py  test_appointments.py  test_dashboard.py  test_document_service.py  test_invoice_service.py  test_patients.py  test_reminders.py  test_rls_isolation.py  test_session_schema.py  test_sessions.py
psicogest/backend/: .env.example  Dockerfile  pyproject.toml  railpack.json  railway.toml  requirements.txt  seed_rips_test.py  test_hms.py
psicogest/backend/alembic/versions/: 0001_initial_schema.py  (+47 more)
psicogest/backend/app/: main.py
psicogest/backend/tests/: conftest.py  test_appointments.py  test_billing_deps.py  test_dashboard.py  test_email_service.py  test_hms_service.py  test_invoice_service.py  test_patients.py  test_rips_service.py
(+355 files in other folders)
